Fix: school manipulation, using API call instead standard for monolitic rails application CRUD
