# app/serializers/school_serializer.rb
@@ -1,0 +1,8 @@
+class SchoolSerializer < ApplicationSerializer
+  attributes :id, :name, :slug, :address, :city, :postcode, :country, :phone, :email, :homepage, :logo, :created_at,
+             :updated_at
+
+  attribute :logo_url do |school|
+    school.logo.url if school.logo.present?
+  end
+end
